--- a/.env.local
+++ b/.env.local
@@ -2,11 +2,15 @@
 # DFX CANISTER ENVIRONMENT VARIABLES
 DFX_VERSION='0.24.3'
 DFX_NETWORK='local'
-CANISTER_ID_AI_ANALYSIS='bkyz2-fmaaa-aaaaa-qaaaq-cai'
+CANISTER_CANDID_PATH_ARBITRA_BACKEND='/Users/llow/Desktop/arbitra/.dfx/local/canisters/arbitra_backend/arbitra_backend.did'
+CANISTER_CANDID_PATH_EVIDENCE_MANAGER='/Users/llow/Desktop/arbitra/.dfx/local/canisters/evidence_manager/evidence_manager.did'
+CANISTER_CANDID_PATH_AI_ANALYSIS='/Users/llow/Desktop/arbitra/.dfx/local/canisters/ai_analysis/ai_analysis.did'
+CANISTER_CANDID_PATH_BITCOIN_ESCROW='/Users/llow/Desktop/arbitra/.dfx/local/canisters/bitcoin_escrow/bitcoin_escrow.did'
 CANISTER_ID_EVIDENCE_MANAGER='bw4dl-smaaa-aaaaa-qaacq-cai'
+CANISTER_ID_AI_ANALYSIS='bkyz2-fmaaa-aaaaa-qaaaq-cai'
+CANISTER_ID_ARBITRA_FRONTEND='be2us-64aaa-aaaaa-qaabq-cai'
 CANISTER_ID_BITCOIN_ESCROW='br5f7-7uaaa-aaaaa-qaaca-cai'
 CANISTER_ID_ARBITRA_BACKEND='bd3sg-teaaa-aaaaa-qaaba-cai'
-CANISTER_ID_ARBITRA_FRONTEND='be2us-64aaa-aaaaa-qaabq-cai'
-CANISTER_ID='bd3sg-teaaa-aaaaa-qaaba-cai'
-CANISTER_CANDID_PATH='/Users/llow/Desktop/arbitra/.dfx/local/canisters/arbitra_backend/arbitra_backend.did'
+CANISTER_ID='be2us-64aaa-aaaaa-qaabq-cai'
+CANISTER_CANDID_PATH='/Users/llow/Desktop/arbitra/.dfx/local/canisters/arbitra_frontend/assetstorage.did'
 # END DFX CANISTER ENVIRONMENT VARIABLES
