--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@dfinity/identity": "^3.4.1",
     "@dfinity/principal": "^3.4.1",
     "@types/node": "^24.9.2",
+    "axios": "^1.4.0",
+    "framer-motion": "^10.16.1",
+    "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -33,9 +36,12 @@
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.0",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
